--- a/CódigoFuente/BitacorasProduccion/Views/Shared/_CTZ_ProjectInfo.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/Shared/_CTZ_ProjectInfo.cshtml
@@ -106,6 +106,11 @@
             <span class="project-info-label">@Html.DisplayNameFor(model => model.ID_Status):</span>
             <span class="project-info-value">@Html.DisplayFor(model => model.CTZ_Project_Status.ConcatStatus) </span>
         </div>
+      <div class="project-info-item">
+            <span class="project-info-icon"><i class="fa-solid fa-user-tag"></i></span>
+            <span class="project-info-label">Assignment Status:</span>
+            <span class="project-info-value">@Html.DisplayFor(model => model.GeneralAssignmentStatusDisplay) </span>
+        </div>
         <div class="project-info-item wide">
             <span class="project-info-icon"><i class="fa-solid fa-user-gear"></i></span>
             <span class="project-info-label">@Html.DisplayNameFor(model => model.ID_Created_By):</span>
