2025-05-23 CTZ: Se agregan manejo de versiones a proyectos.

--- a/CódigoFuente/BitacorasProduccion/Views/CTZ_Catalogs/RejectionReasons.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/CTZ_Catalogs/RejectionReasons.cshtml
@@ -380,7 +380,8 @@
 
       // Lanza al cargar y cada vez que cambie ActionType
       $('#Current_ActionType')
-        .on('change', updateReassignState)
+        .on('change', updateReassignState
+        )
         .trigger('change');
     });
     </script>
